# pathctl

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  build.zig  build.zig.zon  example.PATH  go.mod  go.sum  install-example.sh  main.go  pathctl.go
libpctl/: errors.go  help.go  lines.go  loadfile.go  paths.go
pathctl/: errors.go  help.go  lines.go  loadfile.go  misc.go  pathctl-main.go  pathctl.go  paths.go
src/: filehandle.zig  pathctl.rs  pathctl.zig  util.rs  version.rs
src/util/: append.rs  args.rs  display.rs  path.rs
unit_tests/: loadfile_test.go  util.go
